--- a/Component/vcproj/Component.vcxproj
+++ b/Component/vcproj/Component.vcxproj
@@ -58,7 +58,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;WIN32;DREAMSKY_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;WIN32;DREAMSKY_EXPORTS;LONG_BITSTREAM_READER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -85,12 +85,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\include\common_type.h" />
+    <ClInclude Include="..\include\Component\bits_operation\bits_operation.h" />
+    <ClInclude Include="..\include\Component\bits_operation\get_bits.h" />
+    <ClInclude Include="..\include\Component\bits_operation\int_read_write.h" />
     <ClInclude Include="..\include\Component\config\IniConfig.h" />
     <ClInclude Include="..\include\Component\thread_pool\pthread_pool.h" />
     <ClInclude Include="..\include\Component\thread_pool\std_thread_pool.h" />
     <ClInclude Include="..\include\Component\time\dtime.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\bits_operation\bits_operation.cpp" />
+    <ClCompile Include="..\src\bits_operation\get_bits.cpp" />
     <ClCompile Include="..\src\config\IniConfig.cpp" />
     <ClCompile Include="..\src\thread_pool\pthread_pool.cpp" />
     <ClCompile Include="..\src\thread_pool\std_thread_pool.cpp" />
