--- a/Component/vcproj/Component.vcxproj.filters
+++ b/Component/vcproj/Component.vcxproj.filters
@@ -34,8 +34,8 @@
     <Filter Include="头文件\bits_operation">
       <UniqueIdentifier>{0d951d83-ed5a-478a-af49-141d9e2ef0f0}</UniqueIdentifier>
     </Filter>
-    <Filter Include="源文件\bits_operation">
-      <UniqueIdentifier>{94a25153-fbee-4b37-a918-760a8d02a536}</UniqueIdentifier>
+    <Filter Include="头文件\common">
+      <UniqueIdentifier>{ffe4392d-c838-45be-8b95-dbdc51c6efc5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -63,6 +63,15 @@
     <ClInclude Include="..\include\Component\bits_operation\int_read_write.h">
       <Filter>头文件\bits_operation</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\Component\common\common_math.h">
+      <Filter>头文件\common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Component\common\common_define.h">
+      <Filter>头文件\common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Component\bits_operation\bits_define.h">
+      <Filter>头文件\bits_operation</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\thread_pool\pthread_pool.cpp">
@@ -76,12 +85,6 @@
     </ClCompile>
     <ClCompile Include="..\src\config\IniConfig.cpp">
       <Filter>源文件\config</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\bits_operation\bits_operation.cpp">
-      <Filter>源文件\bits_operation</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\bits_operation\get_bits.cpp">
-      <Filter>源文件\bits_operation</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
