--- a/Component/vcproj/Component.vcxproj
+++ b/Component/vcproj/Component.vcxproj
@@ -58,7 +58,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;WIN32;DREAMSKY_EXPORTS;LONG_BITSTREAM_READER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;WIN32;DREAMSKY_EXPORTS;LONG_BITSTREAM_READER;ARCH_64BITS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -89,6 +89,7 @@
     <ClInclude Include="..\include\Component\bits_operation\bits_operation.h" />
     <ClInclude Include="..\include\Component\bits_operation\get_bits.h" />
     <ClInclude Include="..\include\Component\bits_operation\int_read_write.h" />
+    <ClInclude Include="..\include\Component\bits_operation\put_bits.h" />
     <ClInclude Include="..\include\Component\common\common_define.h" />
     <ClInclude Include="..\include\Component\common\common_math.h" />
     <ClInclude Include="..\include\Component\config\IniConfig.h" />
@@ -97,6 +98,7 @@
     <ClInclude Include="..\include\Component\time\dtime.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\bits_operation\put_bits.cpp" />
     <ClCompile Include="..\src\config\IniConfig.cpp" />
     <ClCompile Include="..\src\thread_pool\pthread_pool.cpp" />
     <ClCompile Include="..\src\thread_pool\std_thread_pool.cpp" />
