1. 统一修改cmake脚本，编译通过。 2. 解决编码问题。

--- a/Algorithm/CMakeLists.txt
+++ b/Algorithm/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(Log VERSION 0.1.0)
+project(Algorithm VERSION 0.1.0)
+
+set(CMAKE_CXX_STANDARD 11)
 
 # 宏定义参数
 add_definitions(-DDREAMSKY_EXPORTS)
@@ -17,13 +19,13 @@ include_directories(
     include
 )
 
-file(GLOB_RECURSE log_src src/Log/*.c)
+file(GLOB_RECURSE check_src src/Algorithm/check/*.cpp)
 
 if (enable_static)
 # 静态库
 add_library(${PROJECT_NAME}_static STATIC
-    # log
-    ${log_src}
+    # check
+    ${check_src}
 )
 # 静态库重命名
 set_target_properties(${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
@@ -35,8 +37,8 @@ endif (enable_static)
 # 这里实际上可以直接使用 ${PROJECT_NAME} 而不是 ${PROJECT_NAME}_shared
 # 但是为了区分，做了一下命名调整
 add_library(${PROJECT_NAME}_shared SHARED
-    # log
-    ${log_src}
+    # check
+    ${check_src}
 )
 # 共享库重命名
 set_target_properties(${PROJECT_NAME}_shared PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
