增加basexx编解码的处理

--- a/Algorithm/vcproj/Algorithm.vcxproj
+++ b/Algorithm/vcproj/Algorithm.vcxproj
@@ -47,7 +47,7 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(ProjectDir)bin\</OutDir>
     <IntDir>$(Platform)_$(Configuration)\</IntDir>
-    <IncludePath>..\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\include;..\..\Component\include;$(IncludePath)</IncludePath>
     <TargetName>lib$(ProjectName)</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -57,7 +57,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;WIN32;DREAMSKY_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;WIN32;DREAMSKY_EXPORTS;ALLOW_LITTLE_CH;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -84,9 +84,11 @@
   <ItemGroup>
     <ClInclude Include="..\include\Algorithm\check\crc.h" />
     <ClInclude Include="..\include\Algorithm\common_type.h" />
+    <ClInclude Include="..\include\Algorithm\EnDecode\base_xx.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\Algorithm\check\crc.cpp" />
+    <ClCompile Include="..\src\Algorithm\EnDecode\base_xx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
