--- a/Algorithm/vcproj/Algorithm.vcxproj.filters
+++ b/Algorithm/vcproj/Algorithm.vcxproj.filters
@@ -25,16 +25,25 @@
     <Filter Include="源文件\EnDecode">
       <UniqueIdentifier>{2cfec354-3f59-4c79-811b-766d7e11463a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\string">
+      <UniqueIdentifier>{18ee18e2-5180-4acf-a6e1-e3a9727e7d64}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\string">
+      <UniqueIdentifier>{1e834615-6272-4493-91b7-7a081fb066fe}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Algorithm\check\crc.h">
       <Filter>头文件\check</Filter>
     </ClInclude>
-    <ClInclude Include="..\include\Algorithm\common_type.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="..\include\Algorithm\EnDecode\base_xx.h">
       <Filter>头文件\EnDecode</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Algorithm\string\string_operation.h">
+      <Filter>头文件\string</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Common\common_type.h">
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -43,6 +52,9 @@
     </ClCompile>
     <ClCompile Include="..\src\Algorithm\EnDecode\base_xx.cpp">
       <Filter>源文件\EnDecode</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Algorithm\string_operation\string_operation.cpp">
+      <Filter>源文件\string</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
