添加“奇技淫巧”

--- a/Program/ObjectModel/vcproj/ObjectModel.vcxproj
+++ b/Program/ObjectModel/vcproj/ObjectModel.vcxproj
@@ -141,10 +141,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\src\ClassMember.cpp" />
+    <ClCompile Include="..\src\KinkyTricks.cpp" />
     <ClCompile Include="..\src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\ClassMember.h" />
+    <ClInclude Include="..\include\KinkyTricks.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
