--- a/Program/ObjectModel/vcproj/ObjectModel.vcxproj.filters
+++ b/Program/ObjectModel/vcproj/ObjectModel.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="..\src\ClassMember.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\KinkyTricks.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\ClassMember.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\KinkyTricks.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
