--- a/Component/vcproj/Component.vcxproj
+++ b/Component/vcproj/Component.vcxproj
@@ -154,11 +154,19 @@
     <ClInclude Include="..\include\Component\bits_operation\int_read_write.h" />
     <ClInclude Include="..\include\Component\bits_operation\put_bits.h" />
     <ClInclude Include="..\include\Component\common\dream_define.h" />
+    <ClInclude Include="..\include\Component\common\dream_exception.h" />
     <ClInclude Include="..\include\Component\common\dream_math.h" />
+    <ClInclude Include="..\include\Component\common\dream_object.h" />
+    <ClInclude Include="..\include\Component\common\dream_priority_queue.h" />
+    <ClInclude Include="..\include\Component\common\dream_status.h" />
     <ClInclude Include="..\include\Component\config\ini_config.h" />
     <ClInclude Include="..\include\Component\dream_component.h" />
     <ClInclude Include="..\include\Component\general\dream_time.h" />
     <ClInclude Include="..\include\Component\general\string_operation.h" />
+    <ClInclude Include="..\include\Component\thread\dream_thread.h" />
+    <ClInclude Include="..\include\Component\thread\dream_thread_pool.h" />
+    <ClInclude Include="..\include\Component\thread\lock\dream_mutex.h" />
+    <ClInclude Include="..\include\Component\thread\lock\dream_spin_lock.h" />
     <ClInclude Include="..\include\Component\thread_pool\pthread_pool.h" />
     <ClInclude Include="..\include\Component\thread_pool\std_thread_pool.h" />
   </ItemGroup>
