--- a/Component/vcproj/Component.vcxproj
+++ b/Component/vcproj/Component.vcxproj
@@ -125,6 +125,8 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;DREAMSKY_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
+      <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,6 +142,8 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;DREAMSKY_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalOptions>/Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -158,7 +162,11 @@
     <ClInclude Include="..\include\Component\common\dream_math.h" />
     <ClInclude Include="..\include\Component\common\dream_object.h" />
     <ClInclude Include="..\include\Component\common\dream_priority_queue.h" />
+    <ClInclude Include="..\include\Component\common\dream_ptr.h" />
+    <ClInclude Include="..\include\Component\common\dream_queue.h" />
+    <ClInclude Include="..\include\Component\common\dream_ring_buffer_queue.h" />
     <ClInclude Include="..\include\Component\common\dream_status.h" />
+    <ClInclude Include="..\include\Component\common\dream_stealing_queue.h" />
     <ClInclude Include="..\include\Component\config\ini_config.h" />
     <ClInclude Include="..\include\Component\dream_component.h" />
     <ClInclude Include="..\include\Component\general\dream_time.h" />
